Test commit, adding a hidden comment

--- a/description.html
+++ b/description.html
@@ -1,1 +1,2 @@
+<!-- adding a change, SLC -->
 This project was just provisioned, so there isn't much to see here. You can find links to the propsal on this page.  Stay tuned for great things. 
