Make test update to description.html

--- a/description.html
+++ b/description.html
@@ -1,3 +1,5 @@
 <!-- adding a change, SLC -->
 <!-- adding a change, ELD -->
-This project was just provisioned, so there isn't much to see here. You can find links to the propsal on this page.  Stay tuned for great things. 
+This project was just provisioned, so there isn't much to see here. You can find links to the proposal on this page.  Stay tuned for great things. 
+<!-- adding another change, PMH -->
+Getting there!....
