Add Google analytics and fix links
#5 Update AdoptOpenJDK download URL
https://github.com/eclipse/openj9-website/issues/5
#6 Update system test link
https://github.com/eclipse/openj9-website/issues/6
#7 Add Google analytic seeds
https://github.com/eclipse/openj9-website/issues/7

Signed-off-by: Peter Hayward <pmhayward@uk.ibm.com>

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.css">
   <link rel="stylesheet" href="./css/global.css">
   <link rel="stylesheet" href="./css/styles.css">  
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-105616558-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </head>
 <body>
   <nav class="colourscheme-block">
@@ -49,7 +57,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
           Optimized to run Java applications cost-effectively in the cloud.<br/>
           Want an OpenJDK build that contains an enterprise grade, open source, Java virtual machine?<br/>
           Grab a pre-built binary and try it for yourself...<br/><br/>
-              <a class="button external-button" style="width:17em" href="https://adoptopenjdk.net/releases.html?variant=openj9">Download Now
+              <a class="button external-button" style="width:17em" href="https://adoptopenjdk.net/releases.html?variant=openjdk9-openj9">Download Now
               <i class="fa fa-download" aria-hidden="true"></i></a>
             </p>
           <h1 style="line-height: 1.5; font-size: 1.6rem;">
@@ -102,7 +110,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
             <p><span class="first-word">Try it out</span> Grab a pre-built OpenJDK binary from AdoptOpenJDK to install on your system, <!-- or simply pull a Docker image to run your app in a pre-configured container. --> and see how your applications perform with the OpenJ9 JVM at work.
             </p>
             <div class="button-container">
-              <a class="button external-button" href="https://adoptopenjdk.net/releases.html?variant=openj9">Download it
+              <a class="button external-button" href="https://adoptopenjdk.net/releases.html?variant=openjdk9-openj9">Download it
               <i class="fa fa-download" aria-hidden="true"></i></a>
 <!--
               <a class="button external-button left-half" href="https://adoptopenjdk.net" target="_blank">AdoptOpenJDK</a>
