New FAQ entries and link change
Issue 11 adds 2 entries to the FAQ on licensing and naming.
Issue 16 changes the link for asking further questions from Stack Overflow
to the OpenJ9 GitHub issues list.

At github.com/eclipse/openj9-website/issues:

issue #11
issue #16

Signed-off-by: Sue Chaplain <sue_chaplain@uk.ibm.com>

--- a/oj9_faq.html
+++ b/oj9_faq.html
@@ -54,7 +54,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
 
           <div class="section-item">
             <span class="intro-text">
-            	This FAQ answers common questions about Eclipse OpenJ9 and how it fits into the OpenJDK ecosystem.</br> If you can't find the answer you're looking for, post a query on our <a href="https://stackoverflow.com/search?q=%23OpenJ9" target="_blank">Stack Overflow forum<i class="fa fa-stack-overflow" aria-hidden="true"></i>
+            	This FAQ answers common questions about Eclipse OpenJ9 and how it fits into the OpenJDK ecosystem.</br> If you can't find the answer you're looking for, post a query on our <a href="https://github.com/eclipse/openj9/issues" target="_blank">GitHub issues list<i class="fa fa-github-alt" aria-hidden="true"></i>
             	</a>
             </span>
           </div>
@@ -76,6 +76,14 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
             </details>
           </div>
 
+		  <div class="section-item-faq">
+            <details id="namej9">
+              <summary>What does the J9 in OpenJ9 stand for?</summary>
+              <p>To clear up a common misconception, J9 != Java 9. If you are interested in hearing about how it got its name, read this <a href="https://medium.com/@rservant/how-did-the-j9-in-openj9-get-its-name-95a6416b4cb9">blog post</a>.
+              </p>
+            </details>
+          </div>
+		  
           <div class="section-item-faq">
             <details id="default-vm">
               <summary>Why use Eclipse OpenJ9 instead of the default JVM?</summary>
@@ -85,6 +93,14 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
             </details>
           </div>
 
+		  <div class="section-item-faq">
+            <details id="license">
+              <summary>What license is Eclipse OpenJ9 made available under?</summary>
+              <p>The project license is Eclipse Public License 2.0 and Apache License, Version 2.0 (you can choose), but the EPLv2 license has a secondary compatibility for the GPL v2 that is used by OpenJDK. You can combine the two projects and use them together (as OpenJDK's GPL v2 of course).
+			  The full license is documented in the <a href="https://github.com/eclipse/openj9/blob/master/LICENSE">LICENSE file</a> and also summarized at the top of virtually every file in the <a href="http://github.com/eclipse/openj9">Eclipse OpenJ9 GitHub repository</a>.
+              </p>
+            </details>
+          </div>
  		  
 		  <div class="section-item-faq">
             <details id="whyopen">
