--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
 
 <!-- INTRO -->
     <div id="intro-block">
-      <h1>Boost your Java application performance</h1>
+      <h1>Let ADAM Boost your Java application performance</h1>
       <p>
 <!--
           <img src="./assets/openj9-hex.png" class="product-logo" />
