--- a/index.html
+++ b/index.html
@@ -34,11 +34,17 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
 <body>
   <div id="main-title">
     <div class="nav">
-      <div><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i><a class="nav-item" href="oj9_build.html">Build</a></div>
-      <div><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i><a class="nav-item" href="oj9_faq.html">FAQ</a></div>
+      <span><i class="fa fa-bars" aria-hidden="true"></i></span>
+      <div class="nav-content">
+        <p><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i>Home</p>
+        <p><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i><a class="nav-item" href="oj9_build.html">Build</a></p>
+        <p><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i><a class="nav-item" href="oj9_faq.html">FAQ</a></p>
+        <p><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i><a class="nav-item" href="oj9_resources.html">Resources</a></p>
+      </div>
     </div>
     <div class="title">
-    	<img id="title_icon" src="./assets/openj9_6.png" alt="Eclipse OpenJ9">
+    	<!--<img class="title_icon" src="./assets/openj9_6a.png" alt="Eclipse OpenJ9">-->
+    	<img class="title_icon" src="./assets/openj9_6b.png" alt="Eclipse OpenJ9">
     </div>  
     <div class="egg">
       <a href="http://wiki.eclipse.org/Development_Resources/Process_Guidelines/What_is_Incubation" target="_blank"><img src="./assets/egg-incubation.png" alt="Eclipse Incubation"></a>
@@ -54,7 +60,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
 <!--
           <img src="./assets/openj9-hex.png" class="product-logo" />
 -->
-        Low memory footprint. Fast start-up time. High application throughput.<br/>
+        Low memory footprint. Fast startup time. High application throughput.<br/>
         Optimized to run Java applications cost-effectively in the cloud.<br/>
         Want an OpenJDK build that contains an enterprise grade, open source, Java virtual machine?<br/>
         Grab a pre-built binary and try it for yourself...
@@ -65,27 +71,99 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
         Give your Java application a thrill<br/>
         Run it on OpenJDK with Eclipse OpenJ9
       </h2> 
-
       <div id="read-more-button">
       	Learn more <i id="read-more-button-icon" class="fa fa-plus-circle" aria-hidden="true"></i>
       </div>
 	
       <div id="read-more-text" class="closed">
-        <p>Eclipse OpenJ9 is a high performance, scalable, Java virtual machine (JVM) implementation that represents hundreds of person-years of effort. Contributed to the Eclipse project by IBM, the OpenJ9 JVM underpins the IBM SDK, Java Technology Edition product that is a core component of many IBM Enterprise software products. Continued development of OpenJ9 at the Eclipse foundation ensures wider collaboration, fresh innovation, and the opportunity to influence the development of OpenJ9 for the next generation of Java applications
+        <p>Eclipse OpenJ9 is a high performance, scalable, Java virtual machine (JVM) implementation that represents hundreds of person-years of effort. Contributed to the Eclipse project by IBM, the OpenJ9 JVM underpins the IBM SDK, Java Technology Edition product that is a core component of many IBM Enterprise software products. Continued development of OpenJ9 at the Eclipse foundation ensures wider collaboration, fresh innovation, and the opportunity to influence the development of OpenJ9 for the next generation of Java applications.
         </p>
         <h2>Saving costs in the cloud</h2>
         <p>OpenJ9 is highly optimized for cloud workloads. The memory footprint is around half the size of other JVM implementations. 
         </p>
+        <p>The following charts compare the performance of OpenJDK 9 with Hotspot and OpenJDK 9 with OpenJ9 when the DayTrader 3 benchmark application is run:
+        </p>
+
+        <div class="figure">
+          <div style=" height:10rem;">
+            <a id="fig1" class="thumb" href="#fig1">
+            	<img src="assets/perf_rss_ramp_xmx1g_2.png" style="height:10rem;" alt="The explanation for this graph is provided in 'DayTrader 3 benchmark testing' (link below)."/>
+              <span>
+              	<img src="assets/perf_rss_ramp_xmx1g_2.png" alt=""/>
+                <p class="hover-caption">DayTrader 3 footprint size during ramp up with a maximum Java heap size set to 1 GB.
+                </p>
+              </span>
+            </a>
+          </div>
+          <p class="caption">Footprint size during ramp up with a maximum Java heap size set to 1 GB.
+          </p>
+        </div>  
+
+        <div class="figure">
+          <div style=" height:10rem;">
+            <a id="fig2" class="thumb" href="#fig2">
+            	<img src="assets/perf_startup_footprint_xmx1g_2.png" style="height:10rem;" alt="The explanation for this graph is provided in 'DayTrader 3 benchmark testing' (link below)."/>
+              <span>
+              	<img src="assets/perf_startup_footprint_xmx1g_2.png" alt=""/>
+                <p class="hover-caption">DayTrader 3 footprint size after start up with a maximum Java heap size set to 1 GB.
+                </p>
+              </span>
+            </a>
+          </div>
+          <p class="caption">Footprint size after start up with a maximum Java heap size set to 1 GB.
+          </p>
+          <p class="caption">For more details, see 
+          	<a href="https://www.eclipse.org/openj9/blob/master/benchmark/daytrader3.md">DayTrader 3 benchmark testing</a>.
+          </p>
+        </div>
+
         <p>Whether you are a cloud user or a cloud provider, a smaller footprint generates immediate cost savings when running applications on most cloud services. You can also take advantage of a tuning mechanism that detects when the JVM is idle, releasing free memory pages to keep the footprint as small as possible and keep your running costs to a minimum.
         </p>
-        <p>If resources become constrained, OpenJ9 provides a dedicated running mode, -Xtune:virtualized, that reduces CPU consumption and memory footprint. This is useful for scenarios where cloud services become highly overcommitted at peak times.
+        <p>If resources become constrained, OpenJ9 provides a dedicated running mode, <code>-Xtune:virtualized</code>, that reduces CPU consumption and memory footprint. This is useful for scenarios where cloud services become highly overcommitted at peak times.
         </p>
         <h2>Better performance</h2>
-        <p>Benchmark tests demonstrate performance improvements over alternative JVM implementations, including faster start up times and higher application throughput.
+        <p>Benchmark tests demonstrate performance improvements over alternative JVM implementations, including faster start up times and comparable application throughput.
         </p>
-        <p>Shared classes and Ahead-of-Time (AOT) technologies typically provide a 20-40% reduction in start-up time while improving the overall ramp-up time of applications. This capability is crucial for short-running Java applications or for horizontal scalability solutions that rely on the frequent provisioning and deprovisioning of JVM instances to manage workloads.</p>
+        <p>The following charts compare the performance of OpenJDK 9 with Hotspot and OpenJDK 9 with OpenJ9 when the DayTrader 3 benchmark application is run:
+        </p>
+
+        <div class="figure">
+          <div style=" height:10rem;">
+            <a id="fig3" class="thumb" href="#fig3">
+            	<img src="assets/perf_startup_xmx1g_2.png" style="height:10rem;" alt="The explanation for this graph is provided in 'DayTrader 3 benchmark testing' (link below)."/>
+            	<span>
+            		<img src="assets/perf_startup_xmx1g_2.png" alt=""/>
+                <p class="hover-caption">DayTrader 3 startup time with a maximum Java heap size set to 1 GB.
+                </p>
+              </span>
+            </a>
+          </div>
+          <p class="caption">Startup time with a maximum Java heap size set to 1 GB.
+          </p>
+        </div>
+
+        <div class="figure">
+          <div style=" height:10rem;">
+            <a id="fig4" class="thumb" href="#fig4">
+            	<img src="assets/perf_thr_ramp_xmx1g_2.png" style="height:10rem;" alt="The explanation for this graph is provided in 'DayTrader 3 benchmark testing' (link below)."/>
+            	<span>
+            		<img src="assets/perf_thr_ramp_xmx1g_2.png" alt=""/>
+                <p class="hover-caption">DayTrader 3 throughput during ramp up with a maximum Java heap size set to 1 GB.
+                </p>
+              </span>
+            </a>
+          </div>
+          <p class="caption">Throughput during ramp up with a maximum Java heap size set to 1 GB.
+          </p>
+          <p class="caption">For more details, see 
+          	<a href="https://www.eclipse.org/openj9/blob/master/benchmark/daytrader3.md">DayTrader 3 benchmark testing</a>.
+          </p>
+        </div>
+
+        <p>Shared classes and Ahead-of-Time (AOT) technologies typically provide a 20-40% reduction in startup time while improving the overall ramp-up time of applications. This capability is crucial for short-running Java applications or for horizontal scalability solutions that rely on the frequent provisioning and de-provisioning of JVM instances to manage workloads.</p>
+
         <p>OpenJ9 has also been built to exploit hardware features, such as graphics processing units (GPU) that can improve the performance of Java applications for different workloads.</p>
-        <p>As a developer you can achieve even faster start-up times by using -Xquickstart mode, which enables rapid development &rarr; deployment &rarr; test cycles to improve productivity.</p>
+        <p>As a developer you can achieve even faster startup times by using <code>-Xquickstart</code> mode, which enables rapid development &rarr; deployment &rarr; test cycles to improve productivity.</p>
       </div> <!-- end: read-more-text -->
 
       <div class="home-button-row">
