--- a/oj9_build.html
+++ b/oj9_build.html
@@ -32,15 +32,19 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
   </script>
 </head>
 <body>
-
-
   <div id="main-title">
     <div class="nav">
-      <div><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i><a class="nav-item" href="index.html">Home</a></div>
-      <div><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i><a class="nav-item" href="oj9_faq.html">FAQ</a></div>
+      <span><i class="fa fa-bars" aria-hidden="true"></i></span>
+      <div class="nav-content">
+        <p><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i><a class="nav-item" href="index.html">Home</a></p>
+        <p><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i>Build</p>
+        <p><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i><a class="nav-item" href="oj9_faq.html">FAQ</a></p>
+        <p><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i><a class="nav-item" href="oj9_resources.html">Resources</a></p>
+      </div>
     </div>
     <div class="title">
-    	<img id="title_icon" src="./assets/openj9_6.png" alt="Eclipse OpenJ9">
+    	<!--<img class="title_icon" src="./assets/openj9_6a.png" alt="Eclipse OpenJ9">-->
+    	<img class="title_icon" src="./assets/openj9_6b.png" alt="Eclipse OpenJ9">
     </div>  
     <div class="egg">
       <a href="http://wiki.eclipse.org/Development_Resources/Process_Guidelines/What_is_Incubation" target="_blank"><img src="./assets/egg-incubation.png" alt="Eclipse Incubation"></a>
@@ -64,7 +68,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
           <li><a href="#prepare">Prepare your system               </a></li>
           <li><a href="#get"    >Get the source                    </a></li>
           <li><a href="#config" >Configure your build              </a></li>
-          <li><a href="#build"  >Build OpenJDK with OpenJ9         </a></li>
+          <li><a href="#build9" >Build OpenJDK with OpenJ9         </a></li>
           <li><a href="#test"   >Test your binary                  </a></li>
         </ol> 
       </div>
@@ -118,7 +122,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
         </div>
       </div>
 
-      <div class="f-section-item" id="build">
+      <div class="f-section-item" id="build9">
         <div class="f-content-container">
           <h3>Build</h3>
           <p>Now you're ready to build OpenJDK with OpenJ9:
