Fix DayTrader link
Signed-off-by: Peter Hayward <pmhayward@uk.ibm.com>

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
           <p class="caption">Footprint size after start up with a maximum Java heap size set to 1 GB.
           </p>
           <p class="caption">For more details, see 
-          	<a href="https://www.eclipse.org/openj9/blob/master/benchmark/daytrader3.md">DayTrader 3 benchmark testing</a>.
+          	<a href="https://git.eclipse.org/r/plugins/gitiles/www.eclipse.org/openj9/+/master/benchmark/daytrader3.md">DayTrader 3 benchmark testing</a>.
           </p>
         </div>
 
@@ -156,7 +156,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
           <p class="caption">Throughput during ramp up with a maximum Java heap size set to 1 GB.
           </p>
           <p class="caption">For more details, see 
-          	<a href="https://www.eclipse.org/openj9/blob/master/benchmark/daytrader3.md">DayTrader 3 benchmark testing</a>.
+          	<a href="https://git.eclipse.org/r/plugins/gitiles/www.eclipse.org/openj9/+/master/benchmark/daytrader3.md">DayTrader 3 benchmark testing</a>.
           </p>
         </div>
 
