Update links to performance data
Signed-off-by: Peter Hayward <pmhayward@uk.ibm.com>

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
         </div>  <!-- end: figures -->
 
         <p class="caption2">For more details, see 
-        <a href="https://git.eclipse.org/r/plugins/gitiles/www.eclipse.org/openj9/+/master/benchmark/daytrader3.md">DayTrader 3 benchmark testing</a>.
+        <a href="https://github.com/eclipse/openj9-website/blob/master/benchmark/daytrader3.md">DayTrader 3 benchmark testing</a>.
         </p>
 
         <p>Whether you are a cloud user or a cloud provider, a smaller footprint generates immediate cost savings when running applications on most cloud services. You can also take advantage of a tuning mechanism that detects when the JVM is idle, releasing free memory pages to keep the footprint as small as possible and keep your running costs to a minimum.
@@ -189,7 +189,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
         </div>  <!-- end: figures -->
 
         <p class="caption2">For more details, see 
-        <a href="https://git.eclipse.org/r/plugins/gitiles/www.eclipse.org/openj9/+/master/benchmark/daytrader3.md">DayTrader 3 benchmark testing</a>.
+        <a href="https://github.com/eclipse/openj9-website/blob/master/benchmark/daytrader3.md">DayTrader 3 benchmark testing</a>.
         </p>
 
 
