Update Resources page
Signed-off-by: Peter Hayward <pmhayward@uk.ibm.com>

--- a/oj9_resources.html
+++ b/oj9_resources.html
@@ -67,7 +67,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
           <ul>
 
             <li><i><a href="https://github.com/eclipse/openj9-website/blob/master/benchmark/daytrader3.md">
-            	Measuring the strengths of OpenJDK with Eclipse OpenJ9</a></i> by Vijay Sundaresan, Marius Pirvu, and Mak Stoodley</li>
+            	Measuring the strengths of OpenJDK with Eclipse OpenJ9</a></i> by Vijay Sundaresan, Marius Pirvu, and Mark Stoodley</li>
 
             <li><i>Java performance optimizations</i> by Vijay Sundaresan, Aleksandar Micic, Dan Heidinga, and Babneet Singh
             	<ul>
