--- a/oj9_resources.html
+++ b/oj9_resources.html
@@ -66,7 +66,10 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
         <div class="f-content-container">
           <ul>
 
-            <li><i><a href="https://github.com/eclipse/openj9-website/blob/master/benchmark/daytrader3.md">
+            <li><i><a href="https://www.slideshare.net/MarkStoodley/javaone-2017-mark-stoodley-open-sourcing-ibm-j9-jvm">
+            	JavaOne 2017: Open Sourcing the IBM J9 Java Virtual Machine</a></i> by Mark Stoodley and Steve Wallin</li>
+			
+			<li><i><a href="https://github.com/eclipse/openj9-website/blob/master/benchmark/daytrader3.md">
             	Measuring the strengths of OpenJDK with Eclipse OpenJ9</a></i> by Vijay Sundaresan, Marius Pirvu, and Mark Stoodley</li>
 
             <li><i>Java performance optimizations</i> by Vijay Sundaresan, Aleksandar Micic, Dan Heidinga, and Babneet Singh
