--- a/oj9_resources.html
+++ b/oj9_resources.html
@@ -43,8 +43,10 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
       </div>
     </div>
     <div class="title">
-    	<!--<img class="title_icon" src="./assets/openj9_6a.png" alt="Eclipse OpenJ9">-->
-    	<img class="title_icon" src="./assets/openj9_6b.png" alt="Eclipse OpenJ9">
+      <a href="index.html">
+        <!--<img class="title_icon" src="./assets/openj9_6a.png" alt="Eclipse OpenJ9">-->
+    	  <img class="title_icon" src="./assets/openj9_6b.png" alt="Eclipse OpenJ9">
+      </a>
     </div>  
     <div class="egg">
       <a href="http://wiki.eclipse.org/Development_Resources/Process_Guidelines/What_is_Incubation" target="_blank"><img src="./assets/egg-incubation.png" alt="Eclipse Incubation"></a>
