Amend title of FAQ question
Signed-off-by: Peter Hayward <pmhayward@uk.ibm.com>

--- a/oj9_faq.html
+++ b/oj9_faq.html
@@ -120,9 +120,8 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
 
       <div class="section-item-faq">
         <details id="performance">
-          <summary>Why does my Java application perform worse with Eclipse OpenJ9?</summary>
-          <p>So you've found that your Java application performs worse with an OpenJDK that contains Eclipse OpenJ9 than with an OpenJDK that contains another JVM implementation?</p>
-          <p>Firstly, we appreciate you taking the time to evaluate the performance. We would like to encourage you to open a <a href="https://github.com/eclipse/openj9/issues">Github issue</a> if you notice an area where you think we can improve. Please tell us about your application, the Java command-line options that you used, and any other relevant information to help us re-create and investigate the issue.
+          <summary>I think I've found a performance issue... How can I be sure?</summary>
+           <p>Firstly, we appreciate you taking the time to evaluate the performance. We would like to encourage you to open a <a href="https://github.com/eclipse/openj9/issues">Github issue</a> if you notice an area where you think we can improve. Please tell us about your application, the Java command-line options that you used, and any other relevant information to help us re-create and investigate the issue.
           </p>
           <p>While we are constantly striving for good performance in as many cases as possible, there are reasons why performance characteristics might be different when running OpenJDK with the OpenJ9 JVM, compared to other JVM implementations.
           </p>
