issue #36: intro-text1 formatting on oj9_resources page... Fixed
Signed-off-by: Peter Hayward <pmhayward@uk.ibm.com>

--- a/oj9_resources.html
+++ b/oj9_resources.html
@@ -57,17 +57,18 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
 
     <div id="resources" class="section-content">
       <h1>Resources</h1>
-
       <div class="f-section-item">
         <span class="intro-text">Where can I learn more about Eclipse OpenJ9?</span>
+      </div>
+      <div class="f-section-item">
         <span class="intro-text1">Follow the links to read recent articles, blog posts, and slides that contain useful information about OpenJ9.</span>
-           <p style="line-height:1rem; margin-bottom:2rem;">(Note that in these articles, you'll find some references to IBM<sup>&reg;</sup> J9 where content was published before IBM contributed the JVM to the Eclipse Foundation.)</p>
       </div>
 
       <div class="f-section-item">
         <div class="f-content-container">
-          <ul>
+          <p style="line-height:1rem; margin-bottom:2rem;">(Note that in these articles, you'll find some references to IBM<sup>&reg;</sup> J9 where content was published before IBM contributed the JVM to the Eclipse Foundation.)</p>
 
+          <ul>
             <li><i><a href="https://www.slideshare.net/MarkStoodley/javaone-2017-mark-stoodley-open-sourcing-ibm-j9-jvm" target="_blank">
               JavaOne 2017: Open Sourcing the IBM J9 Java Virtual Machine</a></i> by Mark Stoodley and Steve Wallin</li>
 
